--- a/src/components/RecipeCard/recipeCard.css
+++ b/src/components/RecipeCard/recipeCard.css
@@ -1,9 +1,6 @@
-.card {
-  transform: rotateZ(-1deg);
-}
 .featured {
   max-width: 400px;
-  height: 400px;
+  height: 200px;
   background-color: #e0e0e0;
 }
 
@@ -16,27 +13,30 @@
   max-width: 400px;
   background: #fff;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
-  margin: 0;
-}
-.info {
-  padding: 16px;
+  padding: 20px;
 }
 .info h4 {
   margin: 4px 0;
   text-transform: uppercase;
 }
 .info p {
-  margin: 0;
   color: #777;
 }
 .actions {
-  margin-top: 20px;
   display: flex;
-  justify-content: flex-end;
+  margin-top: 24px;
 }
 .actions a {
   color: #fff;
   background: #f0d01b;
   padding: 16px 24px;
   text-decoration: none;
+}
+
+@media screen and (min-width: 578px) {
+  .featured {
+    width: 400px;
+    height: 400px;
+    background-color: #e0e0e0;
+  }
 }
