--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,7 +56,7 @@ footer {
 }
 .page-content {
   max-width: 1200px;
-  margin: 20px auto 80px;
+  margin: 0 auto;
   padding: 0 20px;
   width: 100%;
 }
